# es-data-load

./: .gitignore  .pre-commit-config.yaml  404.html  LoadJob.py  README.md  es.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: docs.yml
01 - usage/: index.html
02 - patentsview/: index.html
03 - API Reference/: index.html
data_validations/: validate_patents.py
docs/: 01 - usage.md  02 - patentsview.md  03 - API Reference.md  gen_ref_pages.py  index.md
docs/source/: conf.py  index.rst  modules.rst  tests.rst
es_data_load/: es.py  specification.py
es_data_load/docs/source/: conf.py  modules.rst
es_data_load/pv/schemas/: locations_fields.json  us_application_citations_fields.json  uspc_mainclasses_fields.json  wipo_fields.json
es_data_load/schema/: SchemaManager.py
lib/: utilities.py
mappings/appcitation_load/: application_citation.json
mappings/assignee/: assignee.json
mappings/citations_loads/: patent_citation.json
mappings/cpcs/: cpc_group.json  cpc_subsection.json
mappings/inventor/: inventor.json
mappings/nber/: nber.json  nber_subcategory.json
mappings/nested_fields/: assignee.json  cpc.json  inventor.json
mappings/patents/: patents.json
mappings/patents_nested/: patent.json
mappings/production/: assignee.json  cpc_class.json  cpc_subclass.json  ipcr.json  locations.json  patents.json  uspc_mainclass.json
mappings/staging/: assignee.json  cpc_class.json  ipcr.json  oreference.json  patents.json  rel_app_text.json  us_patent_citations.json  wipo.json
mappings/staging/assignee/: assignee.json
mappings/staging/inventor/: inventor.json
mappings/uspc/: uspc.json
reference/SUMMARY/: index.html
reference/es_data_load/: index.html
requirements/: base.txt  docs.txt  lint.txt
resources/: config_template.ini
source/: DelimitedDataSource.py  MySQLSource.py  TabularDataSource.py  elastic_locations_production.sql  es_assignee_production.sql  es_inventors_staging.sql  es_locations_staging.sql  es_others.sql  es_others_production.sql  es_patents_production.sql  es_patents_staging.sql
source_sqls/: elastic_locations_production.sql  es_assignee_production.sql  es_assignees_staging.sql  es_inventors_production.sql  es_inventors_staging.sql  es_locations_staging.sql  es_others_production.sql  es_patents_production.sql  es_patents_staging.sql
src/es_data_load/: DataSources.py  es.py  specification.py
src/es_data_load/lib/: utilities.py
tests/: LoadJob.py  conftest.py  test_LoadJob.py  test_MySQLSource.py  test_es.py  test_utils.py
tests/all_citations_loads/: application_citation.json  patent_citation.json
tests/mappings/: test_mappings.py
tests/patent_citations_loads/: patent_citation.json
tests/schema/: test_schema.py
tests/utilities/: test_utils.py
(+142 files in other folders)
