[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "es_data_load"
version = "1.0"
authors = [
    { name = "Sarvo Madhavan", email = "smadhavan@air.org" },
]
description = "Python package to load data into elastic search"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "elasticsearch",
    "tqdm",
    "pymysql>=1.0",
]
[tool.setuptools.package-data]
"es_data_load.pv.schemas" = ["*.json"]
"es_data_load.pv.mappings.production" = ["*.json"]